Fix play button on IE
IE swallows click events on SVG elements

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -196,6 +196,7 @@
   .fp-play, .fp-pause
     svg
       position: absolute
+      pointer-events: none
       left: 0
       right: 0
       bottom: 0
